forth/test/fail/test_const_fold_redundant_div_one.af
use' ../../lang.af
fun: .test_const_fold_redundant_div_one { val -- out } val 1 / end
